test/classes/bradc/weirdinit.good
weirdinit.chpl:6: In function 'main':
weirdinit.chpl:7: error: statement uses variable 'a' to define itself
weirdinit.chpl:7: note: the variable 'a' is used to define itself here
